@@ -5,8 +5,10 @@ import com.patsi.bean.SocialMediaUser;
 import com.patsi.configuration.SocialMediaEnvValueConfig;
 import com.patsi.database.repository.SocialMediaRepository;
 import com.patsi.enums.AccountStatus;
+import com.patsi.exceptions.UserNotFoundException;
 import com.patsi.utils.FileHelper;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -18,17 +20,13 @@ import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class SocialMediaService {
+    private final SocialMediaRepository socialMediaRepository;
+    private final SocialMediaEnvValueConfig socialMediaEnvValueConfig;
+    private final MaskingService maskingService;
 
-    @Autowired
-    private SocialMediaRepository socialMediaRepository;
-
-    @Autowired
-    private SocialMediaEnvValueConfig socialMediaEnvValueConfig;
-
-    @Autowired
-    private MaskingService maskingService;
-
+    //Todo: Perhaps not return null/ change to Optional??
     private SocialMediaUser maskUid(SocialMediaUser user) {
         if (user != null) {
             user.setUid(null);
@@ -44,7 +42,6 @@ public class SocialMediaService {
 
     //One time for each account
     public SocialMediaUser createSocialMediaAccount(SocialMediaUser user) {
-        log.info("Creating User in Social Media");
         return saveUserToDb(SocialMediaUser.builder()
             .uid(user.getUid())
             .userName(user.getUserName())
@@ -59,7 +56,6 @@ public class SocialMediaService {
     //Todo: Add Image Filtering
     public void changeProfilePicture(String profilePictureID, byte[] profilePicture)
         throws IOException {
-        log.info("In SocialMedia Service: change ProfilePicture");
         FileHelper.newFile(socialMediaEnvValueConfig.profilePicturePath(),
             profilePictureID, profilePicture);
     }
@@ -67,43 +63,53 @@ public class SocialMediaService {
     //Todo: Fix method after banner field is created on front end, Add Image Filtering
     public SocialMediaUser changeBannerPicture(String userName, byte[] bannerPicture)
         throws IOException {
-        log.info("In SocialMedia Service: change BannerPicture");
+        if (userName == null || userName.isBlank()) {
+            throw new IllegalArgumentException("Username cannot be null or blank.");
+        }
+        if (bannerPicture == null || bannerPicture.length == 0) {
+            throw new IllegalArgumentException("Banner picture data cannot be null or empty.");
+        }
         FileHelper.newFile(socialMediaEnvValueConfig.bannerPicturePath(), userName, bannerPicture);
-        SocialMediaUser user = socialMediaRepository.findByUserName(userName).orElse(null);
-        user.setBannerPicture(user.getUserName());
-        return saveUserToDb(user);
+        return socialMediaRepository
+            .findByUserName(userName)
+            .map(user -> {
+                user.setBannerPicture(userName);
+                return saveUserToDb(user);
+            })
+            .orElseThrow(() -> new UserNotFoundException("User" + userName + "not found!"));
     }
 
     public SocialMediaUser getUserByUid(UUID uid) {
         return maskUid((SocialMediaUser) maskingService.maskSensitiveFields(
-            socialMediaRepository.findByUid(uid).orElse(null)));
+            socialMediaRepository
+                .findByUid(uid)
+                .orElse(null)));
     }
 
     public SocialMediaUser getUserByUserName(String userName) {
         return maskUid((SocialMediaUser) maskingService.maskSensitiveFields(
-            socialMediaRepository.findByUserName(userName).orElse(null)));
+            socialMediaRepository
+                .findByUserName(userName)
+                .orElse(null)));
     }
 
     //Get All Existing Users
     public List<SocialMediaUser> getAllActiveUsers() {
-        System.out.println("In getAllActiveUsers");
         return socialMediaRepository.findAll().stream()
             .filter(user -> user.getAccountStatus().equals(AccountStatus.Active))
             .map(user -> (SocialMediaUser) maskingService.maskSensitiveFields(user))
-            .peek(user -> maskUid(user))
-            .collect(Collectors.toList());
+            .map(this::maskUid)
+            .toList();
     }
 
     //UpdateUserAccount
     public SocialMediaUser updateSocialMediaAccount(SocialMediaUser user) {
-        log.info("In service: update SocialMediaAccount");
-        SocialMediaUser.builder()
+        return saveUserToDb(SocialMediaUser.builder()
             .uid(user.getUid())
             .displayName(user.getDisplayName())
             .biography(user.getBiography())
             .accountType(user.getAccountType())
-            .build();
-        return saveUserToDb(user);
+            .build());
     }
 
     public SocialMediaUser changeUserName(SocialMediaUser user) {
@@ -112,21 +118,23 @@ public class SocialMediaService {
     }
 
     public SocialMediaUser activateAccount(UUID uid) {
-        SocialMediaUser user = socialMediaRepository.findByUid(uid).orElse(null);
-        if (user != null) {
-            user.setAccountStatus(AccountStatus.Active);
-            return saveUserToDb(user);
-        } else
-            return null;
+        return socialMediaRepository
+            .findByUid(uid)
+            .map(user -> {
+                user.setAccountStatus(AccountStatus.Active);
+                return saveUserToDb(user);
+            })
+            .orElseThrow(() -> new UserNotFoundException("Uid " + uid + " not found!"));
     }
 
     public SocialMediaUser deactivateAccount(UUID uid) {
-        SocialMediaUser user = socialMediaRepository.findByUid(uid).orElse(null);
-        if (user != null) {
-            user.setAccountStatus(AccountStatus.Deactivate);
-            return saveUserToDb(user);
-        } else
-            return null;
+        return socialMediaRepository
+            .findByUid(uid)
+            .map(user -> {
+                user.setAccountStatus(AccountStatus.Deactivate);
+                return saveUserToDb(user);
+            })
+            .orElseThrow(() -> new UserNotFoundException("Uid " + uid + " not found!"));
     }
 
     //Todo: Add more business logic
